タスクデータの保存と表示範囲の選択機能

--- a/GanttChartApp/wwwroot/index.html
+++ b/GanttChartApp/wwwroot/index.html
@@ -28,6 +28,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/interop.js"></script>
+    <script src="js/ganttLocalStorage.js"></script>
 </body>
 
 </html>
